--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
@@ -2,13 +2,14 @@
 id: extend-admin-area
 title: Extend Admin Area
 sidebar_label: Extend Admin Area
-keywords: ["webiny", "continuous", "integration", "delivery", "ci", "cd", "scaffold"]
-description: Learn how to set up a CI/CD pipeline for your Webiny project.
+keywords: ["scaffolding", "extend", "admin", "area"]
+description: Learn how to use the Extend Admin Area scaffold.
 ---
 
 import CenteredImage from "@components/CenteredImage";
-import ghEnvironments from "./ci-cd/gh_environments.png";
-import ghActions from "./ci-cd/gh_actions_logo.png";
+import localesSelector from "./extend-admin-area/locales-selector.png";
+import scaffoldsAdminArea from "./extend-admin-area/scaffolds-admin-area.png";
+
 
 :::info Can I use this?
 
@@ -18,12 +19,144 @@ The **Extend Admin Area** scaffold (previously **Admin Area Package**) received 
 
 :::tip What you'll learn
 
--tada
+- main features of the **Extend Admin Area** scaffold
+- how to continue developing on top of the generated application code
 
 :::
 
 ## Overview
 
-The **Extend Admin Area** scaffold creates a new Admin Area module and extends your GraphQL API with
-  supporting CRUD query and mutation operations.
+The **Extend Admin Area** scaffold creates a new module in the Webiny Admin Area React application and extends your GraphQL API with
+  supporting [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) query and mutation operations.
 
+Note that when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/next/packages/cwp-template-aws/template/api/code/graphql) folder.
+
+:::info
+Learn more about the **API** project application on the cloud infrastructure level in the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/api/introduction) key topics section.
+:::
+
+## Features
+
+### New Webiny Admin Area Module
+
+As mentioned in the overview, the scaffold creates a new module in the Webiny Admin Area React application, which consists of the following:
+
+1. a new route (URL) over which we can access the newly created module
+2. a new item in the main menu, which, when clicked, redirects the user to the new route (URL) mentioned above
+3. a basic **CRUD view** which consists of a data list and a form, enabling the user to perform basic CRUD operations
+
+As an example, during the scaffold's set up wizard, if we were to enter `CarManufacturer` as the initial data model name, we'd end up with the following:
+
+1. a new `/car-manufacturers` route
+2. a new **Car Manufacturers** item in the main menu
+3. a CRUD view which let us perform basic CRUD operations on car manufacturers entries
+
+<CenteredImage src={scaffoldsAdminArea} shadow={false} alt={"New Webiny Admin Area Module"} />
+
+<!-- As seen in the screenshot, note that initially all entries consist of two text fields: `title` and `description`. Naturally, based on your requirements, you can remove these fields or add new ones. More on this in the [Development](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area#development) section below. -->
+
+### New CRUD Query and Mutation Operations
+
+The **Extend Admin Area** scaffold also extends your GraphQL API with supporting query and mutation operations.
+
+In order to do this, internally, the scaffold is simply utilizing the existing [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area) scaffold. To learn more about its main features and how to continue developing on top of the application code it generates, please visit its dedicated guide.
+
+### Multi-Locale Support Enabled
+
+By default, Webiny Admin Area is a multi-locale system, which means entries like pages, page categories, forms, settings, and so on, are always created for a specific locale.
+
+The generated application code follows the same idea and there aren't any additional steps that need to be taken in order to enable multi-locale support. By simply changing the locale via the locales selector located in top-right corner of the screen, users get to manage a completely separate set of data, only available for the selected locale.
+
+<CenteredImage src={localesSelector} alt={"Locales Selector"} />
+
+:::info
+The locales selector is visible only when there are two or more locales to choose from. Locales are created via the **Languages** module.
+:::
+
+### No Additional Cloud Infrastructure Resources
+
+The scaffold does not add any additional cloud infrastructure resources. The generated application code is simply added to the existing Admin Area React application code ([`apps/admin/code`](https://github.com/webiny/webiny-js/tree/v5/packages/cwp-template-aws/template/apps/admin/code)).
+
+Of course, if additional cloud infrastructure resources are needed, you're free amend the [existing cloud infrastructure code](https://github.com/webiny/webiny-js/tree/next/packages/cwp-template-aws/template/apps/admin/pulumi), and reference added and deployed resources in your application code.
+
+:::tip
+Supporting GraphQL API has its own cloud infrastructure code, located in the [`api/pulumi`](https://github.com/webiny/webiny-js/tree/next/packages/cwp-template-aws/template/apps/admin/pulumi) folder. So, if you're planning to add new cloud infrastructure resources that will be referenced within your GraphQL API application code, it makes more sense to introduce cloud infrastructure code changes there, and not in the [`apps/admin/pulumi`](https://github.com/webiny/webiny-js/tree/next/packages/cwp-template-aws/template/apps/admin/pulumi), linked above.
+:::
+
+## Development
+
+### Essential Files
+
+The following are the most essential files and folders that are generated in the scaffolding process.
+
+:::info
+By default, all of the files are generated in a new folder, located at `apps/admin/code/src/plugins/scaffolds/admin/{dataModelName}`, for example `apps/admin/code/src/plugins/scaffolds/admin/carManufacturers`.
+:::
+
+[`index.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/index.ts)
+
+This is the entrypoint file, which exports the [`menus`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/index.ts#L1) and [`routes`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/index.ts#L2) plugins. Note that the actual CRUD view is referenced within the `routes` plugins.
+
+[`menus.tsx`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/menus.tsx)
+
+Export a single [`MenuPlugin`](https://github.com/webiny/webiny-js/blob/9e490409f0367c596f9ee112ad57c265c74ff8d6/packages/api-page-builder/src/plugins/MenuPlugin.ts#L20) plugin that's responsible for adding the new main menu item.
+
+[`routes.tsx`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/routes.tsx)
+
+Exports a single [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/9e490409f0367c596f9ee112ad57c265c74ff8d6/packages/app/src/plugins/RoutePlugin.tsx#L8) plugin that's responsible for creating a new route (URL), on which the CRUD view will be rendered.
+
+[`views/`](https://github.com/webiny/webiny-js/tree/next/packages/cli-plugin-scaffold-admin-app-module/template/views)
+
+Contains all of the React components and [hooks](/webiny/webiny-js/tree/next/packages/cli-plugin-scaffold-admin-app-module/template/views/hooks) that form the CRUD view.
+
+### First Deploy
+
+#### Admin Area React Application
+
+Since the Admin Area React application can be developed locally, there's no need to perform any additional deployments.
+
+#### GraphQL API
+
+Once you've completed the scaffold's setup wizard and the files have been generated, in order to actually see the changes made to your GraphQL API, you need to deploy them. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them. More on this below.
+
+### Development Using the Watch Command
+
+The most straightforward way to further develop on top of the generated code would be via the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command.
+
+In order to get started, from your project root, run the following two commands:
+
+```
+yarn webiny watch apps/admin --env {env}
+```
+
+```
+yarn webiny watch api/code/graphql --env {env}
+```
+
+The first command initiates a new local development server and a watch session on the Admin Area React application.
+
+The second command initiates a watch session on the GraphQL API application code and ensures that every change we perform is automatically deployed into the cloud.
+
+:::info
+Check out the [Extend GraphQL API Development](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#development) section for more information.
+:::
+
+<!-- ### Adding New Fields -->
+
+<!-- As mentioned in the overview, initially, all entries consist of two text fields: `title` and `description`. Naturally, based on your requirements, you can remove these fields or add new ones. -->
+
+<!-- When in need to modify existing or add new fields, note that we need to perform changes in both the generated Admin Area module (CRUD view) and on the GraphQL API side. -->
+
+<!-- #### Admin Area Module -->
+
+<!-- New fields can be added in the generated [`Form`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/views/TargetDataModelsForm.tsx#L50-L82) component -->
+
+<!-- To add new fields in the CRUD view's form, -->
+
+## FAQ
+
+#### How does security (authorization, authorization) work?
+
+Please note that, by default, the authentication and authorization logic isn't included in the generated code.
+
+Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](/docs/tutorials/create-an-application/security/introduction) to learn how to implement these on your own.
