--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api.mdx
@@ -6,10 +6,6 @@ keywords: ["scaffolding", "extend", "graphql", "api"]
 description: Learn how to use the Extend GraphQL API scaffold.
 ---
 
-import CenteredImage from "@components/CenteredImage";
-import ghEnvironments from "./ci-cd/gh_environments.png";
-import ghActions from "./ci-cd/gh_actions_logo.png";
-
 :::info Can I use this?
 
 The **Extend GraphQL API** scaffold (previously GraphQL **API Package**) received a major overhaul in [Webiny 5.9.0](/docs/changelog/5.9.0). Note that this guide is not relevant for projects that are using Webiny 5.8.0 and lower.
@@ -19,13 +15,13 @@ The **Extend GraphQL API** scaffold (previously GraphQL **API Package**) receive
 :::tip What you'll learn
 
 - main features of the **Extend GraphQL API** scaffold
-- how to continue developing on top of the generated code
+- how to continue developing on top of the generated application code
 
 :::
 
 ## Overview
 
-The **Extend GraphQL API** scaffold extends your project's GraphQL HTTP API with new CRUD query and mutation operations.
+The **Extend GraphQL API** scaffold extends your project's GraphQL HTTP API with new [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) query and mutation operations.
 
 Note that when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/next/packages/cwp-template-aws/template/api/code/graphql) folder.
 
@@ -93,7 +89,7 @@ Note that if you prefer a different library, like for example the [DynamoDB Docu
 
 By default, Webiny Admin Area is a multi-locale system, which means entries like pages, page categories, forms, settings, and so on, are always created for a specific locale.
 
-The generated code follows the same idea. There aren't any additional steps that need to be taken in order to enable multi-locale support.
+The generated application code follows the same idea. There aren't any additional steps that need to be taken in order to enable multi-locale support.
 
 ### Testing Setup
 
@@ -105,7 +101,7 @@ A brief overview of different types of tests can be found in the [CI/CD / Testin
 
 ### No Additional Cloud Infrastructure Resources
 
-The scaffold does not add any additional cloud infrastructure resources. The generated code is simply added to the existing GraphQL API application code ([`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5/packages/cwp-template-aws/template/api/code/graphql)).
+The scaffold does not add any additional cloud infrastructure resources. The generated application code is simply added to the existing GraphQL API application code ([`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5/packages/cwp-template-aws/template/api/code/graphql)).
 
 Of course, if additional cloud infrastructure resources are needed, you're free amend the [existing cloud infrastructure code](https://github.com/webiny/webiny-js/tree/next/packages/cwp-template-aws/template/api/pulumi), and reference added and deployed resources in your application code.
 
@@ -113,7 +109,7 @@ Of course, if additional cloud infrastructure resources are needed, you're free 
 
 ### Essential Files
 
-The following are the most essential files that are generated in the scaffolding process.
+The following are the most essential files and folders that are generated in the scaffolding process.
 
 :::info
 By default, all of the files are generated in a new folder, located at `api/code/graphql/src/plugins/scaffolds/graphql/{dataModelName}`, for example `api/code/graphql/src/plugins/scaffolds/graphql/carManufacturers`.
@@ -207,11 +203,11 @@ You are free to create new tests in the similar fashion, or amend the existing o
 
 ## FAQ
 
-#### What about security?
+#### How does security (authorization, authorization) work?
 
 Please note that, by default, the authentication and authorization logic isn't included in the generated code. In other words, all of the generated GraphQL query and mutation operations can be performed by anonymous (not logged-in) users, which is in most cases not the desired behaviour.
 
-Please check out the [existing tutorials](/docs/tutorials/create-an-application/security/introduction) to learn how to implement these on your own.
+Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](/docs/tutorials/create-an-application/security/introduction) to learn how to implement these on your own.
 
 #### I need more flexibility when it comes to data querying. Can I bring in a different database, for example ElasticSearch?
 
