--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
@@ -10,7 +10,6 @@ import CenteredImage from "@components/CenteredImage";
 import localesSelector from "./extend-admin-area/locales-selector.png";
 import scaffoldsAdminArea from "./extend-admin-area/scaffolds-admin-area.png";
 
-
 :::info Can I use this?
 
 The **Extend Admin Area** scaffold (previously **Admin Area Package**) received a major overhaul in [Webiny 5.9.0](/docs/changelog/5.9.0). Note that this guide is not relevant for projects that are using Webiny 5.8.0 and lower.
@@ -27,7 +26,7 @@ The **Extend Admin Area** scaffold (previously **Admin Area Package**) received 
 ## Overview
 
 The **Extend Admin Area** scaffold creates a new module in the Webiny Admin Area React application and extends your GraphQL API with
-  supporting [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) query and mutation operations.
+supporting [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) query and mutation operations.
 
 Note that when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/api/code/graphql) folder.
 
@@ -41,19 +40,21 @@ Learn more about the **API** project application on the cloud infrastructure lev
 
 As mentioned in the overview, the scaffold creates a new module in the Webiny Admin Area React application, which consists of the following:
 
-1. a new route (URL) over which we can access the newly created module
-2. a new item in the main menu, which, when clicked, redirects the user to the new route (URL) mentioned above
-3. a basic **CRUD view** which consists of a data list and a form, enabling the user to perform basic CRUD operations
+1. a basic **CRUD view** which consists of a data list and a form, enabling the user to perform basic CRUD operations
+2. a new route (URL) on which the CRUD view is being rendered
+3. a new item in the main menu, which, when clicked, redirects the user to the new route (URL)
 
-As an example, during the scaffold's set up wizard, if we were to enter `CarManufacturer` as the initial data model name, we'd end up with the following:
+As an example, during the scaffold's setup wizard, if we were to enter `CarManufacturer` as the initial data model name, we'd end up with the following:
 
-1. a new `/car-manufacturers` route
-2. a new **Car Manufacturers** item in the main menu
-3. a CRUD view which let us perform basic CRUD operations on car manufacturers entries
+1. a CRUD view which let us perform basic CRUD operations on car manufacturer entries
+2. a new `/car-manufacturers` route
+3. a new **Car Manufacturers** item in the main menu
 
 <CenteredImage src={scaffoldsAdminArea} shadow={false} alt={"New Webiny Admin Area Module"} />
 
-<!-- As seen in the screenshot, note that initially all entries consist of two text fields: `title` and `description`. Naturally, based on your requirements, you can remove these fields or add new ones. More on this in the [Development](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area#development) section below. -->
+:::info
+As seen in the screenshot, note that initially all entries consist of two text fields: `title` and `description`. Naturally, based on your requirements, you can remove these fields or add new ones. More on this in the [Development](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area#development) section below.
+:::
 
 ### New CRUD Query and Mutation Operations
 
@@ -80,7 +81,7 @@ The scaffold does not add any additional cloud infrastructure resources. The gen
 Of course, if additional cloud infrastructure resources are needed, you're free amend the [existing cloud infrastructure code](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/apps/admin/pulumi), and reference added and deployed resources in your application code.
 
 :::tip
-Supporting GraphQL API has its own cloud infrastructure code, located in the [`api/pulumi`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/apps/admin/pulumi) folder. So, if you're planning to add new cloud infrastructure resources that will be referenced within your GraphQL API application code, it makes more sense to introduce cloud infrastructure code changes there, and not in the [`apps/admin/pulumi`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/apps/admin/pulumi), linked above.
+Note that the supporting GraphQL API has its own cloud infrastructure code, located in the [`api/pulumi`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/api/pulumi) folder. So, if you're planning to add new cloud infrastructure resources that will be referenced within your GraphQL API application code, it makes more sense to introduce cloud infrastructure code changes there, and not in the [`apps/admin/pulumi`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/apps/admin/pulumi), linked above.
 :::
 
 ## Development
@@ -95,7 +96,7 @@ By default, all of the files are generated in a new folder, located at `apps/adm
 
 [`index.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/index.ts)
 
-This is the entrypoint file, which exports the [`menus`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/index.ts#L1) and [`routes`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/index.ts#L2) plugins. Note that the actual CRUD view is referenced within the `routes` plugins.
+This is the entrypoint file, which exports the [`menus`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/index.ts#L1) and [`routes`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/index.ts#L2) plugins.
 
 [`menus.tsx`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/menus.tsx)
 
@@ -103,11 +104,11 @@ Export a single [`MenuPlugin`](https://github.com/webiny/webiny-js/blob/9e490409
 
 [`routes.tsx`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-admin-app-module/template/routes.tsx)
 
-Exports a single [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/9e490409f0367c596f9ee112ad57c265c74ff8d6/packages/app/src/plugins/RoutePlugin.tsx#L8) plugin that's responsible for creating a new route (URL), on which the CRUD view will be rendered.
+Exports a single [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/9e490409f0367c596f9ee112ad57c265c74ff8d6/packages/app/src/plugins/RoutePlugin.tsx#L8) plugin that's responsible for creating a new route (URL), on which the CRUD view will be rendered. This is where the actual React component that form the CRUD view are referenced.
 
 [`views/`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cli-plugin-scaffold-admin-app-module/template/views)
 
-Contains all of the React components and [hooks](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cli-plugin-scaffold-admin-app-module/template/views/hooks) that form the CRUD view.
+Contains all of the React components and [hooks](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cli-plugin-scaffold-admin-app-module/template/views/hooks) that form the CRUD view. The main parent component is exported in the [`views/index.tsx`](https://github.com/webiny/webiny-js/blob/v5.9.0/packages/cli-plugin-scaffold-admin-app-module/template/views/index.tsx#L10) file.
 
 ### First Deploy
 
@@ -117,25 +118,29 @@ Since the Admin Area React application can be developed locally, once you've com
 
 #### GraphQL API
 
-Once you've completed the scaffold's setup wizard and the files have been generated, in order to actually see the changes made to your GraphQL API, you need to deploy them. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them. More on this below.
+Once you've completed the scaffold's setup wizard, in order to actually see the changes made to your GraphQL API, you need to deploy them. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them. More on this below.
 
 ### Development Using the Watch Command
 
 The most straightforward way to further develop on top of the generated code would be via the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command.
 
-In order to get started, from your project root, run the following two commands:
+In order to get started, from your project root, you can run the following two commands.
+
+#### Admin Area React Application
 
 ```
 yarn webiny watch apps/admin --env {env}
 ```
 
+This command initiates a new local development server and a watch session on the Admin Area React application. In other words, the React application is running locally and all changes are immediately visible in user's browser as they make them.
+
+#### GraphQL API
+
 ```
 yarn webiny watch api/code/graphql --env {env}
 ```
 
-The first command initiates a new local development server and a watch session on the Admin Area React application.
-
-The second command initiates a watch session on the GraphQL API application code and ensures that every change we perform is automatically deployed into the cloud.
+This command initiates a watch session on the GraphQL API application code and ensures that every change we perform is automatically deployed into the cloud.
 
 :::info
 Check out the [Extend GraphQL API - Development](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#development) section for more information on how to continue developing the supporting GraphQL API.
