--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
@@ -118,7 +118,7 @@ Since the Admin Area React application can be developed locally, once you've com
 
 #### GraphQL API
 
-Once you've completed the scaffold's wizard, in order to actually see the changes made to your GraphQL API, you need to deploy them. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them. More on this below.
+Once you've completed the scaffold's wizard, in order to actually see the changes made to your GraphQL API, you need to deploy them. This can be done as usual, via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them. More on this below.
 
 ### Development Using the Watch Command
 
